# skt-dhatu-parser

./: .gitignore  initial-spec.MD  pyproject.toml
dhatu/: __init__.py  __main__.py  _loader.py  _transliterate.py  analyse.py  conjugate.py  errors.py  krdanta.py  models.py  rules.py
dhatu/data/: forms.msgpack  krdanta.msgpack  lemma_index.msgpack  meta.msgpack
scripts/: build_data.py  pyproject.toml
tests/: test_analyse.py  test_conjugate.py  test_edge_cases.py  test_krdanta.py
